vctuik-unsafe-internals/tests/ui/lifetime_check.stderr
error[E0499]: cannot borrow `store` as mutable more than once at a time
  --> tests/ui/lifetime_check.rs:18:22
   |
11 |         let mut builder = Builder::new(&mut store);
   |                                        ---------- first mutable borrow occurs here
...
18 |         Builder::new(&mut store);
   |                      ^^^^^^^^^^ second mutable borrow occurs here
...
21 |     *a;
   |     -- first borrow later used here
